svg visibility on firefox fixed, added alt to links

--- a/css/style.css
+++ b/css/style.css
@@ -840,6 +840,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   width: 100%;
   height: 100%;
   min-height: 300px;
+  border: none;
 }
 
 #venue .venue-info {
@@ -973,7 +974,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #supporters img {
   transition: all 0.4s ease-in-out;
-  width: 100%;
+  width: 190px;
+  
   
 }
 
